Added push notification support
