# template/definitions/api.yaml
@@ -1,11 +1,21 @@
 paths:
+  '/Products/push/{message}':
+    get:
+      responses:
+        '200':
+          description: 200 OK
+      summary: >-
+        Send a push notification to all the devices registered to your Push
+        Notifications service instance.
   /Products/protected:
     get:
       responses:
         '200':
           description: 200 OK
       summary: ''
-      description: Protected endpoint. Only accessible after authentication with MCA Service.
+      description: >-
+        Protected endpoint. Only accessible after authentication with MCA
+        Service.
   '/Products/image/{container}/{file}':
     get:
       responses:
@@ -43,7 +53,9 @@ paths:
     put:
       tags:
         - Product
-      summary: Update an existing model instance or insert a new one into the data source.
+      summary: >-
+        Update an existing model instance or insert a new one into the data
+        source.
       operationId: Product.upsert
       parameters:
         - name: data
@@ -161,7 +173,9 @@ paths:
     put:
       tags:
         - Product
-      summary: Update attributes for a model instance and persist it into the data source.
+      summary: >-
+        Update attributes for a model instance and persist it into the data
+        source.
       operationId: Product.prototype.updateAttributes
       parameters:
         - name: data
